--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <div class="card" id="card-w0">你好</div>
         <div class="card" id="card-w1">Nǐ hǎo</div>
         <div class="card" id="card-w2"></div>
-        <div id="control-container">
-            <button id="prev-word">前</button>
-            <button id="next-page">裏</button>
-            <button id="next-word">次</button>
+        <div id="big-control-container" class="control-container">
+            <button id="prev-word" class="big">前</button>
+            <button id="next-page" class="big">裏</button>
+            <button id="next-word" class="big">次</button>
+        </div>
+        <div id="small-control-container" class="control-container">
+            <button id="auto-play">自動</button>
         </div>
     </div>
 </body>
