--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button id="next-word" class="big">次</button>
         </div>
         <div id="small-control-container" class="control-container">
+            <button id="shuffle">混</button>
             <button id="auto-play">自動</button>
         </div>
     </div>
