add link to Weblio Chinese dictionary

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="small-control-container" class="control-container">
             <button id="shuffle">混</button>
             <button id="auto-play">自動</button>
+            <button id="dict-link" data-url="https://cjjc.weblio.jp/">辞書</button>
         </div>
     </div>
 </body>
