support third page of each word

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="container">
         <div class="card" id="card-w0">你好</div>
         <div class="card" id="card-w1">Nǐ hǎo</div>
-        <div class="card" id="card-w2"></div>
+        <div class="card" id="card-w2">こんにちは</div>
         <div id="big-control-container" class="control-container">
             <button id="prev-word" class="big">前</button>
             <button id="next-page" class="big">裏</button>
