add 〜/～ and long-tap actions

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>zhenbai</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script crossorigin="anonymous" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="util.js"></script>
-    <script src="zhenbai.js"></script>
+    <script src="util.js" charset="utf-8"></script>
+    <script src="zhenbai.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="container">
