add fix_page option

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 <option value="ten">10個前,後</option>
                 <option value="initial">前,次の頭文字</option>
             </select></div>
+            <div>「前」「次」でページ位置<select id="prev_next_word_page">
+                <option value="reset">リセット</option>
+                <option value="fix">固定</option>
+            </select></div>
         </div>
         <footer>
             <button id="close-settings">閉じる</button>
