add color settings

--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
                 <option value="ten">10個前,後</option>
                 <option value="initial">前,次の頭文字</option>
             </select></div>
-            <div>「前」「次」でページ位置<select id="prev_next_word_page">
+            <div>「前」「次」でページ位置: <select id="prev_next_word_page">
                 <option value="reset">リセット</option>
                 <option value="fix">固定</option>
             </select></div>
+            <div>色:
+                <label>一声 <input type="color" id="tone1_color"/></label>
+                <label>二声 <input type="color" id="tone2_color"/></label>
+                <label>三声 <input type="color" id="tone3_color"/></label>
+                <label>四声 <input type="color" id="tone4_color"/></label>
+                <label>軽声 <input type="color" id="tone0_color"/></label>
+                <button id="reset_tone_colors">色をリセット</button>
+            </div>
         </div>
         <footer>
             <button id="close-settings">閉じる</button>
