refactor: * change indentation size and other coding styles * mark objects frozen/unfrozen * use Map instead of Object * use custom Error class

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <div id="settings">
         <h1>設定</h1>
         <div id="settings-properties">
-            <div>「前」「次」長押し時: <select id="prev_next_word_longtap">
+            <div>「前」「次」長押し時: <select id="pn_word_longtap">
                 <option value="ten">10個前,後</option>
                 <option value="initial">前,次の頭文字</option>
             </select></div>
-            <div>「前」「次」でページ位置: <select id="prev_next_word_page">
+            <div>「前」「次」でページ位置: <select id="pn_word_page">
                 <option value="reset">リセット</option>
                 <option value="fix">固定</option>
             </select></div>
