* add highlight of ch,zh,sh * update color when settings changed * refactor

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <label>軽声 <input type="color" id="tone0_color"/></label>
                 <button id="reset_tone_colors">色をリセット</button>
             </div>
+            <div><label><input type="checkbox" id="r_highlight"/>
+                zh, ch, shをハイライト
+            </label></div>
         </div>
         <footer>
             <button id="close-settings">閉じる</button>
